# quicktools

./: README.md  pyproject.toml
.github/workflows/: publish.yml
assets/themes/: dark_minimal.pptx
docs/: index.html  quicktools.html  search.js
docs/assets/assets/themes/: UBusiness_Potential.pptx  creative_orange.pptx  modern_blue.pptx
docs/quicktools/: audiotools.html  calculus.html  cli.html  combinatorics.html  doctools.html  filetools.html  imagetools.html  linalg.html  mathtools.html  numbertheory.html  pdftools.html  presentationtools.html  spreadsheettools.html  strtools.html  unitconverter.html  videotools.html
release_084/: quicktools_atom-0.8.4-py3-none-any.whl
release_085/: quicktools_atom-0.8.5-py3-none-any.whl
release_086/: quicktools_atom-0.8.6-py3-none-any.whl
release_087/: quicktools_atom-0.8.7-py3-none-any.whl
release_088/: quicktools_atom-0.8.8-py3-none-any.whl
src/quicktools/: __init__.py  audiotools.py  calculus.py  cli.py  combinatorics.py  doctools.py  filetools.py  imagetools.py  linalg.py  mathtools.py  numbertheory.py  pdftools.py  presentationtools.py  spreadsheettools.py  strtools.py  unitconverter.py  videotools.py
