[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quicktools-atom"
version = "0.8.7"
description = "Math, text, presentation, audio, video, and file utilities by AtomDev Studios"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Samuel Peprah", email = "windscribe.samuel@gmail.com" }
]
dependencies = [
    "Pillow",
    "python-docx",
    "pypdf",
    "openpyxl",
    "reportlab",
    "PyYAML",
    "pdf2docx",
    "docx2pdf",
    "python-pptx",
    "faster-whisper",
    "av",
    "pyannote.audio",
    "yt-dlp>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/Samuel-Peprah-cmd/quicktools"
Repository = "https://github.com/Samuel-Peprah-cmd/quicktools"
Documentation = "https://samuel-peprah-cmd.github.io/quicktools/"

[project.scripts]
quicktools = "quicktools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]